# proggyleg

./: README.md  generate docs.ipynb  generate plots.ipynb  generate.ipynb  pyproject.toml
.github/workflows/: docs.yml
docs/: 2008.ipynb  2009.ipynb  2011.ipynb  2013.ipynb  2014.ipynb  2015.ipynb  2016.ipynb  2017.ipynb  2018.ipynb  2019.ipynb  2020.ipynb  2021.ipynb  2022.ipynb  2023.ipynb  conf.py  index.md  index_bundesliga.md  index_championship.md  index_efl_championship copy.md  index_efl_championship.md  index_efl_league_one.md  index_la_liga.md  index_ligue_1.md  index_premier_league.md  index_scottish_premiership.md  index_serie_a.md  requirements.txt
docs/D1/: 2000.ipynb  2001.ipynb  2002.ipynb  2003.ipynb  2004.ipynb  2005.ipynb  2006.ipynb  2007.ipynb  2008.ipynb  2009.ipynb  2010.ipynb  2011.ipynb  2012.ipynb  2013.ipynb  2014.ipynb  2015.ipynb  2016.ipynb  2017.ipynb  2018.ipynb  2019.ipynb  2020.ipynb  2021.ipynb  2022.ipynb  2023.ipynb  2024.ipynb  2025.ipynb
docs/E0/: 1993.ipynb  1994.ipynb  1995.ipynb  1996.ipynb  1997.ipynb  1998.ipynb  1999.ipynb  2000.ipynb  2001.ipynb  2002.ipynb  2003.ipynb  2004.ipynb  2005.ipynb  2006.ipynb  2007.ipynb  2008.ipynb  2009.ipynb  2010.ipynb  2011.ipynb  2012.ipynb  2013.ipynb  2014.ipynb  2015.ipynb  2016.ipynb  2017.ipynb  2018.ipynb  2019.ipynb  2020.ipynb  2021.ipynb  2022.ipynb  2023.ipynb  2024.ipynb  2025.ipynb
docs/E1/: 2004.ipynb  2005.ipynb  2006.ipynb  2007.ipynb  2008.ipynb  2009.ipynb  2010.ipynb  2011.ipynb  2012.ipynb  2013.ipynb  2014.ipynb  2015.ipynb  2016.ipynb  2017.ipynb  2018.ipynb  (+7 more)
proggyleg/: proggyleg.py
(+36 files in other folders)
