[project]
name = "proggyleg"
version = "0.1.0"
authors = [
  { name="Johnnie Gray", email="johnniemcgray@gmail.com" },
]
description = "Cumulative points and other progress plots for the premier league"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"