[project]
name = "proggyleg"
version = "0.1.0"
authors = [
  { name="Johnnie Gray", email="johnniemcgray@gmail.com" },
]
description = "Cumulative points and other progress plots for the premier league"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
proggyleg = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=6.30.1,<7"
matplotlib = ">=3.10.6,<4"
nbformat = ">=5.10.4,<6"
jupyter = ">=1.1.1,<2"
furo = ">=2024.8.6,<2025"
myst-nb = ">=1.3.0,<2"
myst-parser = ">=4.0.1,<5"
numpy = ">=2.3.3,<3"
sphinx = ">=8.3.0,<9"
